# rust-yandexmarket

./: .gitignore  Cargo.toml  ConfigExample.toml  LICENSE  README.md
examples/: 01.rs  campaigns.rs  delete_offers.rs  geobases.rs  get_campaign_offers.rs  get_campaigns.rs  get_categories_max_sale_quantum.rs  get_categories_tree.rs  get_category_content_parameters.rs  init_client.rs  init_client_from_env.rs  init_config.rs  licenses.rs  offer_cards.rs  offer_mapings.rs  offer_mappings.rs  offer_mappings_archive.rs  offer_prices_update.rs  offer_recommendations.rs  offers_update.rs  outlets.rs  price_quarantine.rs  sales_management.rs  sales_managment.rs  tariffs_calculate.rs  update_offer_mappings.rs  update_stock.rs
src/: api_client.rs  lib.rs
src/apis/: bids_api.rs  business_offer_mappings_api.rs  businesses_api.rs  campaigns_api.rs  categories_api.rs  chats_api.rs  configuration.rs  content_api.rs  dbs_api.rs  delivery_services_api.rs  express_api.rs  fbs_api.rs  fby_api.rs  feed_categories_api.rs  feedbacks_api.rs  feeds_api.rs  goods_stats_api.rs  hidden_offers_api.rs  mod.rs  models_api.rs  offer_mappings_api.rs  offers_api.rs  order_business_information_api.rs  order_delivery_api.rs  order_labels_api.rs  orders_api.rs  orders_stats_api.rs  outlet_licenses_api.rs  outlets_api.rs  price_quarantine_api.rs  prices_api.rs  regions_api.rs  reports_api.rs  returns_api.rs  shipments_api.rs  stocks_api.rs  tariffs_api.rs  warehouses_api.rs
src/methods/: campaign.rs  geobase.rs  mod.rs  offer_cards.rs  offer_mapping.rs  outlet.rs  sales_management.rs  sales_managment.rs
src/models/: accept_order_cancellation_request.rs  add_hidden_offers_request.rs  add_offers_to_archive_dto.rs  add_offers_to_archive_error_dto.rs  add_offers_to_archive_error_type.rs  add_offers_to_archive_request.rs  add_offers_to_archive_response.rs  add_offers_to_archive_response_all_of.rs  affected_order_quality_rating_component_type.rs  age_dto.rs  age_unit_type.rs  api_client_data_error_response.rs  api_error_dto.rs  api_error_response.rs  api_error_response_all_of.rs  api_forbidden_error_response.rs  api_limit_error_response.rs  api_locked_error_response.rs  api_not_found_error_response.rs  api_response.rs  api_response_status_type.rs  api_server_error_response.rs  api_unauthorized_error_response.rs  base_campaign_offer_dto.rs  base_offer_dto.rs  (+591 more)
