[package]
name = "rust-yandexmarket"
version = "0.1.2"
edition = "2021"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]
rust-version = "1.75"
license = "MIT"
description = "Библиотека для работы с API Yandex.Market на языке программирования Rust"
repository = "https://github.com/LigeronAhill/rust-yandexmarket"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "./gen", package = "openapi" }