[package]
name = "rust-yandexmarket"
version = "0.1.2"
edition = "2021"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]
rust-version = "1.79"
license = "MIT"
description = "Библиотека для работы с API Yandex.Market на языке программирования Rust"
repository = "https://github.com/LigeronAhill/rust-yandexmarket"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = {version = "1.38.0", features = ["full"]}
# errors
anyhow = "1.0.86"
# requests
reqwest = { version = "0.12.5", features = ["json", "gzip"] }
# serialization
serde = { version = "1.0.204", features = ["derive"] }
derive_builder = "0.20.0"
# telemetry
tracing = "0.1.40"
# secrets
secrecy = "0.8.0"
[dev-dependencies]
tracing-subscriber = "0.3.18"